clusters/agora-rke2/monitoring/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-public
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: "Host(`grafana.bnbdevelopment.hu`) && PathPrefix(`/`)"
    services:
    - name: prometheus-release-grafana 
      port: 80
